overflow fixed in header img

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,4 +8,5 @@
   color: #fff;
   max-width: 1440px;
   height: 100%;
+  margin: 0 auto;
 }
