--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
   font-family: Montserrat, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  background-color: #131314;
 }
-
